Mon Aug  20 23:05:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed _LOTS_ of typos in the box widget whiched caused very odd
	  behaviour.
	* Also started writing a test program, the Ewl_Box widget test is the
	  only one implemented right now.

Mon Aug  20 17:26:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added x & y padding policy ability to the box children.
	* Some minor fixes in the box code.

Mon Aug  20 16:30:28 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Re-imported an old ewl_box.c and integrated it with all new stuff.
	* Cleaned up some paramenter names in some code.

Mon Aug  20 01:48:07 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Started the ChangeLog.
	* Fixed memleak in __ewl_button_theme_update.
	* Cleaned up Ewl_Entry to work with the new text widget and add a
	  theme_update callback to it. + some changed in the theme code.
	* Made ewl_theme_data_get return void *, and be a pointer to the data
	  in the hash, this is necessery to be able to return other stuff then
	  strings.
	* I introduced a new bug in the Ewl_Seeker widget when playing working
	  with the Ewl_Button widget, and fixed it.